--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,10 @@ dependencies {
 
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
     implementation 'com.github.santosbogo.PrintScript:runner:1.1.22-SNAPSHOT'
+    implementation 'com.github.santosbogo.PrintScript:shared:1.1.22-SNAPSHOT'
+    implementation 'com.github.santosbogo.PrintScript:interpreter:1.1.22-SNAPSHOT'
+    implementation 'com.github.santosbogo.PrintScript:formatter:1.1.22-SNAPSHOT'
+    implementation 'com.github.santosbogo.PrintScript:linter:1.1.22-SNAPSHOT'
 }
 
 kotlin {
