--- a/build.gradle
+++ b/build.gradle
@@ -46,11 +46,13 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
-    implementation 'com.github.santosbogo.PrintScript:runner:1.1.22-SNAPSHOT'
-    implementation 'com.github.santosbogo.PrintScript:shared:1.1.22-SNAPSHOT'
-    implementation 'com.github.santosbogo.PrintScript:interpreter:1.1.22-SNAPSHOT'
-    implementation 'com.github.santosbogo.PrintScript:formatter:1.1.22-SNAPSHOT'
-    implementation 'com.github.santosbogo.PrintScript:linter:1.1.22-SNAPSHOT'
+    implementation 'com.github.santosbogo.PrintScript:runner:1.1.23-SNAPSHOT'
+    implementation 'com.github.santosbogo.PrintScript:shared:1.1.23-SNAPSHOT'
+    implementation 'com.github.santosbogo.PrintScript:interpreter:1.1.23-SNAPSHOT'
+    implementation 'com.github.santosbogo.PrintScript:formatter:1.1.23-SNAPSHOT'
+    implementation 'com.github.santosbogo.PrintScript:linter:1.1.23-SNAPSHOT'
+    implementation 'com.github.santosbogo.PrintScript:parser:1.1.23-SNAPSHOT'
+    implementation 'com.github.santosbogo.PrintScript:lexer:1.1.23-SNAPSHOT'
 }
 
 kotlin {
