--- a/Dockerfile.multi
+++ b/Dockerfile.multi
@@ -3,6 +3,7 @@ COPY . /home/gradle/src
 WORKDIR /home/gradle/src
 RUN gradle assemble
 FROM openjdk:21-slim
+EXPOSE 8081
 RUN mkdir /app
 COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
 ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=production", "/app/spring-boot-application.jar"]
