--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.6'
     id 'org.jlleitschuh.gradle.ktlint' version '10.2.1'
     id 'org.jetbrains.kotlinx.kover' version '0.8.2'
+    id 'maven-publish'
 }
 
 group = 'com.students'
@@ -85,4 +86,23 @@ tasks.named('build') {
 
 tasks.named('check') {
     dependsOn "ktlintCheck", ":koverVerify", ":koverHtmlReport"
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/santosbogo/PrintScript")
+            credentials {
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
 }
