--- a/build.gradle
+++ b/build.gradle
@@ -100,8 +100,8 @@ publishing {
             name = "GitHubPackages"
             url = uri("https://maven.pkg.github.com/santosbogo/PrintScript")
             credentials {
-                username = System.getenv("GITHUB_ACTOR")
-                password = System.getenv("GITHUB_TOKEN")
+                username = project.findProperty("github.user") ?: System.getenv("USER")
+                password = project.findProperty("github.token") ?: System.getenv("TOKEN")
             }
         }
     }
