--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,10 @@ jobs:
                     java-version: 21
                     distribution: 'adopt'
 
+            - name: Configure Gradle
+              run: |
+                echo "ORG_GRADLE_PROJECT_github.user=${{ secrets.USER }}" >> $GITHUB_ENV
+                echo "ORG_GRADLE_PROJECT_github.token=${{ secrets.TOKEN }}" >> $GITHUB_ENV
+
             -   name: Run Build
                 run: ./gradlew build
