--- a/build.gradle
+++ b/build.gradle
@@ -30,11 +30,12 @@ repositories {
         name = "GitHubPackages"
         url = uri("https://maven.pkg.github.com/santosbogo/printscript")
         credentials {
-            username = project.findProperty("github.user") ?: System.getenv("USER")
-            password = project.findProperty("github.token") ?: System.getenv("TOKEN")
+            username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+            password = project.findProperty("gpr.token") ?: System.getenv("GITHUB_TOKEN")
         }
     }
 }
+
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -98,10 +99,10 @@ publishing {
     repositories {
         maven {
             name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/santosbogo/PrintScript")
+            url = uri("https://maven.pkg.github.com/TomasValleDuran/Ingsis-Parse")
             credentials {
-                username = project.findProperty("github.user") ?: System.getenv("USER")
-                password = project.findProperty("github.token") ?: System.getenv("TOKEN")
+                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+                password = project.findProperty("gpr.token") ?: System.getenv("GITHUB_TOKEN")
             }
         }
     }
