Added file in cont-del.yml in the step build and push

--- a/.github/workflows/cont-int.yml
+++ b/.github/workflows/cont-int.yml
@@ -10,6 +10,7 @@ on:
 jobs:
     integration:
         runs-on: ubuntu-latest
+        name: Continuous Integration
 
         steps:
             -   name: Checkout
