--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -14,6 +14,7 @@ jobs:
   delivery:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
+    name: Continuous Delivery
 
     permissions:
       contents: read
