--- a/.github/workflows/cont-dep.yml
+++ b/.github/workflows/cont-dep.yml
@@ -15,6 +15,7 @@ jobs:
     deployment:
         if: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' }}
         runs-on: ubuntu-latest
+        name: Continuous Deployment
 
         permissions:
             contents: read
