--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -2,7 +2,7 @@ name: continuous delivery
 
 on:
   workflow_run:
-    workflows: ["continuous deployment"]
+    workflows: ["continuous integration"]
     types:
       - completed
 
@@ -19,10 +19,17 @@ jobs:
     permissions:
       contents: read
       packages: write
+      id-token: read
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: 21
+          distribution: 'adopt'
 
       - name: Log in to the Container registry
         uses: docker/login-action@v2
