--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -1,8 +1,11 @@
 name: continuous delivery
 
 on:
+  push:
+    branches:
+      - main
   workflow_run:
-    workflows: ["continuous integration"]
+    workflows: [ "continuous integration" ]
     types:
       - completed
 
