--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -22,7 +22,7 @@ jobs:
     permissions:
       contents: read
       packages: write
-      id-token: read
+      id-token: write
 
     steps:
       - name: Checkout
