Testing by putting env variable in the workflow rather than the step

--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -12,6 +12,8 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: tomasvalleduran/ingsis-parse
+  GITHUB_ACTOR: ${{ github.actor }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   delivery:
