--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -49,6 +49,6 @@ jobs:
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         env:
-          GITHUB_USER: ${{ secrets.USERNAME }}
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          USERNAME: ${{ secrets.USERNAME }}
+          TOKEN: ${{ secrets.TOKEN }}
 
