secrets now are only called in env declaration and with the prefix GITHUB_ as the documentation says

--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -12,8 +12,8 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: tomasvalleduran/ingsis-parse
-  GITHUB_USERNAME: ${{ secrets.USERNAME }}
-  GITHUB_TOKEN: ${{ secrets.TOKEN }}
+  GITHUB_USERNAME: ${{ secrets.GITHUB_USERNAME }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   delivery:
