--- a/.github/workflows/cont-int.yml
+++ b/.github/workflows/cont-int.yml
@@ -7,6 +7,11 @@ on:
     pull_request:
         branches:
             - '*'
+
+env:
+    GITHUB_USERNAME: ${{ secrets.GITHUB_USERNAME }}
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
     integration:
         runs-on: ubuntu-latest
