--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -44,12 +44,6 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile.multi
-          push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_ACTOR: ${{ github.actor }}
+        run: |
+          docker build . --tag ${{REGISTRY}}/${{IMAGE_NAME}}:latest
+          docker push $REGISTRY/$IMAGE_NAME:latest
