--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -9,12 +9,6 @@ on:
     types:
       - completed
 
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: tomasvalleduran/ingsis-parse
-  GITHUB_ACTOR: ${{ github.actor }}
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
 jobs:
   delivery:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
@@ -37,11 +31,17 @@ jobs:
           distribution: 'adopt'
 
       - name: Log in to the Container registry
+        env:
+          REGISTRY: ghcr.io
+          IMAGE_NAME: tomasvalleduran/ingsis-parse
+          GITHUB_ACTOR: ${{ github.actor }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ env.actor }}
+          password: ${{ env.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
         run: |
