--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -34,13 +34,13 @@ jobs:
         env:
           REGISTRY: ghcr.io
           IMAGE_NAME: tomasvalleduran/ingsis-parse
-          GITHUB_ACTOR: ${{ secrets.GITHUB_USERNAME }}
+          GITHUB_ACTOR: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ env.GITHUB_USERNAME }}
+          username: ${{ github.actor }}
           password: ${{ env.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
