Environment variables were bad declared

--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -47,6 +47,9 @@ jobs:
           password: ${{ env.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
+        env:
+          REGISTRY: ghcr.io
+          IMAGE_NAME: tomasvalleduran/ingsis-parse
         run: |
           docker build . -f Dockerfile.multi --tag ${{env.REGISTRY}}/${{env.IMAGE_NAME}}:latest
           docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
