Sending credentials to dockerfile as arguments

--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -39,7 +39,6 @@ jobs:
           IMAGE_NAME: tomasvalleduran/ingsis-parse
           GITHUB_ACTOR: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
@@ -53,5 +52,6 @@ jobs:
           GITHUB_ACTOR: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          docker build . -f Dockerfile.multi --tag ${{env.REGISTRY}}/${{env.IMAGE_NAME}}:latest
+          docker build . -f Dockerfile.multi --tag ${{env.REGISTRY}}/${{env.IMAGE_NAME}}:latest \
+           --build-arg GITHUB_USER=${{ github.actor }} --build-arg GITHUB_TOKEN=${{ env.GITHUB_TOKEN }}
           docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
