--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -7,14 +7,13 @@ on:
   pull_request:
     branches:
       - '*'
-#  workflow_run:
-#    workflows: [ "continuous deployment" ]
-#    types:
-#      - completed
+  workflow_run:
+    workflows: [ "continuous deployment" ]
+    types:
+      - completed
 
 jobs:
   delivery:
-#    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     name: Continuous Delivery
 
@@ -42,7 +41,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
+          username: ${{ env.GITHUB_ACTOR }}
           password: ${{ env.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
@@ -53,5 +52,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           docker build . -f Dockerfile.multi --tag ${{env.REGISTRY}}/${{env.IMAGE_NAME}}:latest \
-           --build-arg GITHUB_USER=${{ github.actor }} --build-arg GITHUB_TOKEN=${{ env.GITHUB_TOKEN }}
+           --build-arg GITHUB_USER=${{ env.GITHUB_ACTOR }} --build-arg GITHUB_TOKEN=${{ env.GITHUB_TOKEN }}
           docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
