--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   delivery:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     name: Continuous Delivery
 
