--- a/.github/workflows/cont-dep.yml
+++ b/.github/workflows/cont-dep.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   deployment:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     name: Continuous Deployment
 
