--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -19,7 +19,7 @@ jobs:
     name: Continuous Delivery
 
     permissions:
-      contents: write #Por si me olvido: esto estaba en read, lo cambie para ver si magicamente funciona
+      contents: read
       packages: write
       id-token: write
 
@@ -38,7 +38,7 @@ jobs:
           REGISTRY: ghcr.io
           IMAGE_NAME: tomasvalleduran/ingsis-parse
           GITHUB_ACTOR: ${{ github.actor }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT }}
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
@@ -50,7 +50,7 @@ jobs:
           REGISTRY: ghcr.io
           IMAGE_NAME: tomasvalleduran/ingsis-parse
           GITHUB_ACTOR: ${{ github.actor }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT }}
         run: |
           docker build . -f Dockerfile.multi --tag ${{env.REGISTRY}}/${{env.IMAGE_NAME}}:latest \
            --build-arg GITHUB_USER=${{ env.GITHUB_ACTOR }} --build-arg GITHUB_TOKEN=${{ env.GITHUB_TOKEN }}
