--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
       context: .
       dockerfile: Dockerfile.multi
     ports:
-      - 8081:8080
+      - 8081:8080 #local-port:docker-port
