--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,9 +12,9 @@ env:
   GITHUB_ACTOR: ${{ github.actor }}
   SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.ref_name == main && 'tomasvalleduran/ingsis-parse' || 'tomasvalleduran/ingsis-parse-prod' }}
-  VM_HOST: ${{ github.ref_name == main && '20.70.208.179' || '20.213.8.120' }}
-  VM_USER: ${{ github.ref_name == main && 'students' || 'matichialva' }}
+  IMAGE_NAME: ${{ github.ref_name == 'main' && 'tomasvalleduran/ingsis-parse' || 'tomasvalleduran/ingsis-parse-prod' }}
+  VM_HOST: ${{ github.ref_name == 'main' && '20.70.208.179' || '20.213.8.120' }}
+  VM_USER: ${{ github.ref_name == 'main' && 'students' || 'matichialva' }}
 
 
 jobs:
