--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,8 +18,9 @@ env:
 
 
 jobs:
-  continuous integration:
+  continuous-integration:
     runs-on: ubuntu-latest
+    name: continuous integration
 
     steps:
       - name: continuous integration
@@ -27,9 +28,10 @@ jobs:
         with:
           env_vars: ${{ toJson(env) }}
 
-  continuous deployment:
+  continuous-deployment:
     runs-on: ubuntu-latest
-    needs: continuous integration
+    name: continuous deployment
+    needs: continuous-integration
 
     steps:
       - name: continuous deployment
@@ -37,9 +39,10 @@ jobs:
         with:
           env_vars: ${{ toJson(env) }}
 
-  continuous delivery:
+  continuous-delivery:
     runs-on: ubuntu-latest
-    needs: continuous deployment
+    name: continuous delivery
+    needs: continuous-deployment
 
     steps:
       - name: continuous delivery
@@ -47,9 +50,10 @@ jobs:
         with:
           env_vars: ${{ toJson(env) }}
 
-  update virtual machine:
+  update-virtual-machine:
     runs-on: ubuntu-latest
-    needs: continuous delivery
+    name: update virtual machine
+    needs: continuous-delivery
 
     steps:
       - name: update vm
