Changed inputs on workflows

--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -13,6 +13,7 @@ on:
         description: 'GitHub Actor'
         required: true
         default: ${{ github.actor }}
+    secrets:
       token:
         description: 'Personal Access Token with sufficient rights to publish Docker image'
         required: true
