--- a/.github/workflows/cont-dep.yml
+++ b/.github/workflows/cont-dep.yml
@@ -6,10 +6,12 @@ on:
       actor:
         description: 'GitHub Actor'
         required: true
+        type: string
     secrets:
       token:
         description: 'Personal Access Token'
         required: true
+        type: string
 
 jobs:
   deployment:
