--- a/.github/workflows/cont-int.yml
+++ b/.github/workflows/cont-int.yml
@@ -24,5 +24,5 @@ jobs:
 
       -   name: Run Build
           env:
-            GITHUB_TOKEN: ${{ inputs.token }}
+            GITHUB_TOKEN: ${{ secrets.token }}
           run: ./gradlew build
