--- a/.github/workflows/update-vm.yml
+++ b/.github/workflows/update-vm.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         host: ${{ inputs.host }}
         username: ${{ inputs.user }}
-        key: ${{ inputs.key }}
+        key: ${{ secrets.key }}
         script: |
           docker-compose -f /home/students/ingsis-infra/docker-compose.yml down
           docker-compose -f /home/students/ingsis-infra/docker-compose.yml up -d
