Changed script in update-vm.yml

--- a/.github/workflows/update-vm.yml
+++ b/.github/workflows/update-vm.yml
@@ -11,16 +11,9 @@ on:
         description: 'Virtual Machine User'
         required: true
         type: string
-      actor:
-        description: 'GitHub Actor'
-        required: true
-        type: string
     secrets:
       key:
         description: 'SSH Private Key to access the virtual machine'
-        required: true
-      token:
-        description: 'Personal Access Token'
         required: true
 
 jobs:
@@ -38,6 +31,6 @@ jobs:
         username: ${{ inputs.user }}
         key: ${{ secrets.key }}
         script: |
-          echo ${{ secrets.token }} | docker login ghcr.io -u ${{ inputs.actor }} --password-stdin
-          docker compose -f /home/students/ingsis-infra/docker-compose.yml down
-          docker compose -f /home/students/ingsis-infra/docker-compose.yml up -d
+          cd ingsis-infra
+          sudo docker compose down
+          sudo docker compose up -d
