--- a/.github/workflows/cont-dep.yml
+++ b/.github/workflows/cont-dep.yml
@@ -7,6 +7,10 @@ on:
         description: 'GitHub Actor'
         required: true
         type: string
+      package_name:
+        description: 'Package name to publish'
+        required: true
+        type: string
     secrets:
       token:
         description: 'Personal Access Token'
@@ -35,3 +39,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.token }}
           GITHUB_ACTOR: ${{ inputs.actor }}
+          PACKAGE_NAME: ${{ inputs.package_name }}
