--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -23,6 +23,7 @@ jobs:
       packages: write
     with:
       actor: ${{ github.actor }}
+      package_name: ${{ github.ref_name == 'main' && 'ingsis-parse' || 'ingsis-parse-prod' }}
     secrets:
       token: ${{ secrets.GITHUB_TOKEN }}
 
