--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
+
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
     implementation 'com.github.santosbogo.PrintScript:runner:1.1.23-SNAPSHOT'
     implementation 'com.github.santosbogo.PrintScript:shared:1.1.23-SNAPSHOT'
@@ -55,6 +57,11 @@ dependencies {
     implementation 'com.github.santosbogo.PrintScript:linter:1.1.23-SNAPSHOT'
     implementation 'com.github.santosbogo.PrintScript:parser:1.1.23-SNAPSHOT'
     implementation 'com.github.santosbogo.PrintScript:lexer:1.1.23-SNAPSHOT'
+
+    implementation 'org.springframework.boot:spring-boot-starter-security' //apply role based security
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+    implementation 'org.springframework.security:spring-security-oauth2-jose' // JWT decoding and validation
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 kotlin {
