--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,9 @@ services:
       dockerfile: Dockerfile.multi
     ports:
       - 8081:8080
+    environment:
+      AUTH0_AUDIENCE: ${AUTH0_AUDIENCE}
+      AUTH_SERVER_URI: ${AUTH_SERVER_URI}
+      AUTH_CLIENT_ID: ${AUTH_CLIENT_ID}
+      AUTH_CLIENT_SECRET: ${AUTH_CLIENT_SECRET}
+      spring.security.oauth2.resourceserver.jwt.issuer-uri: ${AUTH_SERVER_URI}
