--- a/build.gradle
+++ b/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     implementation("io.projectreactor.kotlin:reactor-kotlin-extensions") //ktlin extensions for reactive programming.
     implementation 'org.austral.ingsis:redis-streams-flux:0.1.13'
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor")
+    implementation("org.springframework.boot:spring-boot-starter-data-redis")
 }
 
 kotlin {
