REDIS: asset service needed when running local.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,27 @@ services:
       SPRING_DATA_REDIS_PORT: 6379
     depends_on:
         - redis
+
+  asset_api:
+    image: ghcr.io/austral-ingsis/snippet-asset-service:latest
+    ports:
+      - "8084:8080"
+    environment:
+      AZURE_HOST: "http://azurite"
+      NEW_RELIC_APP_NAME: "asset-service"
+      NEW_RELIC_AGENT_ENABLED: false
+
+  azurite:
+    image: mcr.microsoft.com/azure-storage/azurite
+    hostname: azurite
+    restart: always
+    ports:
+      - "10000:10000"
+      - "10001:10001"
+      - "10002:10002"
+    volumes:
+      - blob:/workspace
+
+volumes:
+  blob:
+    external: false
