--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: redis:latest
     ports:
       - '6379:6379'
-  api:
+  printscript-api:
     build:
       context: .
       dockerfile: Dockerfile.multi
