--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -19,6 +19,9 @@ on:
       token:
         description: 'Personal Access Token with sufficient rights to publish Docker image'
         required: true
+      new_relic_license_key:
+        description: 'License key for monitoring'
+        required: true
 
 jobs:
   delivery:
@@ -56,3 +59,4 @@ jobs:
           build-args: |
               GITHUB_ACTOR=${{ inputs.actor }}
               GITHUB_TOKEN=${{ secrets.token }}
+              NEW_RELIC_LICENSE_KEY=${{ secrets.new_relic_license_key }}
