--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -42,6 +42,7 @@ jobs:
       actor: ${{ github.actor }}
     secrets:
       token: ${{ secrets.PAT }}
+      new_relic_license_key: ${{ secrets.NEW_RELIC_LICENSE_KEY }}
 
   update-virtual-machine:
     name: update virtual machine
