--- a/.github/workflows/cont-del.yml
+++ b/.github/workflows/cont-del.yml
@@ -15,6 +15,10 @@ on:
         description: 'GitHub Actor'
         required: true
         type: string
+      new_relic_app_name:
+        description: 'New Relic App Name'
+        required: true
+        type: string
     secrets:
       token:
         description: 'Personal Access Token with sufficient rights to publish Docker image'
@@ -60,3 +64,4 @@ jobs:
               GITHUB_ACTOR=${{ inputs.actor }}
               GITHUB_TOKEN=${{ secrets.token }}
               NEW_RELIC_LICENSE_KEY=${{ secrets.new_relic_license_key }}
+              NEW_RELIC_APP_NAME=${{  }}
