--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -40,6 +40,7 @@ jobs:
       registry: ghcr.io
       image_name: ${{ github.ref_name == 'main' && 'ingsis-students/ingsis-parse' || 'ingsis-students/ingsis-parse-prod' }}
       actor: ${{ github.actor }}
+      new_relic_app_name: 'printscript-api'
     secrets:
       token: ${{ secrets.PAT }}
       new_relic_license_key: ${{ secrets.NEW_RELIC_LICENSE_KEY }}
