--- a/Dockerfile.multi
+++ b/Dockerfile.multi
@@ -8,7 +8,7 @@ ENV GITHUB_ACTOR=$GITHUB_USER
 ENV GITHUB_TOKEN=$GITHUB_TOKEN
 
 # Set the New Relic application name (optional, you can also pass this as an argument)
-ARG NEW_RELIC_APP_NAME=$NEW_RELIC_APP_NAME
+ARG NEW_RELIC_APP_NAME
 ENV NEW_RELIC_APP_NAME=$NEW_RELIC_APP_NAME
 
 COPY . /home/gradle/src
@@ -27,8 +27,8 @@ ENV NEW_RELIC_LICENSE_KEY=$NEW_RELIC_LICENSE_KEY
 COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
 
 RUN mkdir -p /usr/local/newrelic
-ADD ./newrelic/newrelic.jar /usr/local/newrelic/newrelic.jar
-ADD ./newrelic/newrelic.yml /usr/local/newrelic/newrelic.yml
+COPY ./newrelic/newrelic.jar /usr/local/newrelic/newrelic.jar
+COPY ./newrelic/newrelic.yml /usr/local/newrelic/newrelic.yml
 
 # Run the application with New Relic
 ENTRYPOINT ["java", "-javaagent:/usr/local/newrelic/newrelic.jar", "-jar", "-Dspring.profiles.active=production", "/app/spring-boot-application.jar"]
